fix deprecation warnings for Class#newInstance