@@ -64,8 +64,7 @@ public class CollectionWordLoops {
 
     static Collection<String> newCollection(Class<?> cl) {
         try {
-            Collection m = (Collection<String>) cl.newInstance();
-            return m;
+            return (Collection<String>) cl.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException("Can't instantiate " + cl + ": " + e);
         }
